TWI-41 feat: add methods GetAllFollowers,GetAllFollowings
